<resources>
    <string name="app_name">MoneyIO</string>

    <string-array name="history_spinner">
        <item>@string/combined</item>
        <item>@string/friends_stats</item>
        <item>@string/my_stats_spinner</item>
    </string-array>

    <string-array name="languages">
        <item>Select Language</item>
        <item>Bulgarian</item>
        <item>English</item>
    </string-array>

    <string name="combined">Combined</string>
    <string name="friends_stats">Friends stats</string>
    <string name="my_stats_spinner">My stats</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_with_e_mail">login with e-mail</string>
    <string name="register_with_e_mail">register with e-mail</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="set_time">Set time:</string>
    <string name="add">add</string>
    <string name="message">Message</string>
    <string name="reminders">Reminders</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="insert_price">Insert price</string>
    <string name="dot">.</string>
    <string name="del">DEL</string>
    <string name="insert_comment">Insert comment</string>
    <string name="email_two_dots">Email: </string>
    <string name="personal_name">Personal name: </string>
    <string name="salary">Salary:</string>
    <string name="create_your_own_types">Create type</string>
    <string name="your_type">Your type</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="save">save</string>
    <string name="your_types">Your Types</string>
    <string name="tutorial_text2">By clicking this button, you can check some statistics about you incomes and expenses.</string>
    <string name="tutorial_got_it_btn_text">GOT IT</string>
    <string name="tutorial_text1">By clicking this button, you open the application menu and add new friends, check your statistics, set your reminders…</string>
    <string name="do_you_want_to_log_out">Do you want to Log Out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_out">Log Out</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="quit">Quit</string>
    <string name="statistics">Statistics</string>
    <string name="my_profile">My Profile</string>
    <string name="alarms">Alarms</string>
    <string name="my_stats">My Stats</string>
    <string name="no_internet_to_reg">Sorry no internet to register</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_symbols">Invalid symbols</string>
    <string name="invalid_user_or_password">Invalid user or password</string>
    <string name="auth_failed_try_later">Authentication failed. Please try again.</string>
    <string name="password_must_be_six_sym">Password must be 6 symbols minimum</string>
    <string name="password_does_not_match">Passwords does not match</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="could_not_register_successfully">Could not register successfully</string>
    <string name="cancel_registration">Do you want to cancel registration?</string>
    <string name="cancel_registration_btn_text">Cancel registration</string>
    <string name="add_friend">add friend</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="sign_in_with">sign in with</string>
    <string name="sign_up">Sign up</string>
    <string name="do_you_have_an_account_sign_in">Do you have an account? Sign in</string>
    <string name="friend_e_mail">Friend e-mail</string>
    <string name="notify_me_about_friend_activity">Notify me about friend activity:   </string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="name">Name: </string>
    <string name="amount">Amount</string>
    <string name="no_added_types">*No added types.</string>
    <string name="text">Text</string>
    <string name="money_io">MoneyIO</string>
    <string name="sorry_internet_problem_please_try_again">Sorry, internet problem. Please try again.</string>
    <string name="hello">Hello,</string>
    <string name="horizontal_bar_chart">Horizontal Bar Chart \n</string>
    <string name="hbc_day_text">Graphic that shows your daily expenses. By clicking on the calendar icon, you can check your statistics about the day you want to see.</string>
    <string name="pie_chart">Pie Chart \n</string>
    <string name="pc_text">Shows your monthly incomes and expenses.</string>
    <string name="hbc_month_text">Graphic that shows your monthly expenses. By clicking on the calendar icon, you can check your statistics about the month you want to see.</string>
    <string name="combined_chart">Combined chart \n</string>
    <string name="pie_year_text">Shows your yearly incomes and expenses.</string>
    <string name="combined_year_text">Chart that shows your incomes and expenses during the months in the chosen year.</string>
    <string name="horizontal_year_text">Graphic that shows your yearly expenses. By clicking on the calendar icon, you can check your statistics about the year you want to see.\"</string>
    <string name="enter_valid_mail">Enter valid email</string>
    <string name="added">added</string>
    <string name="deleted">Deleted</string>
    <string name="refreshing">Refreshing...</string>
    <string name="DAY">DAY</string>
    <string name="MONTH">MONTH</string>
    <string name="YEAR">YEAR</string>
    <string name="ADDED">ADDED</string>
    <string name="price_not_added">Price not added</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="DELETED">DELETED</string>
    <string name="cancel">Cancel</string>
    <string name="DELETE">DELETE</string>
    <string name="profile_text">You can create your own types of Incomes and Expenses.</string>
    <string name="profile_salary_text">By adding your salary here, each month, on selected date, the added amount of money will be added to your account as Income.</string>
    <string name="pay_day_">Pay Day: SELECT</string>
    <string name="PAY_DAY">Pay Day:</string>
    <string name="Salary">Salary</string>
    <string name="saved">Saved</string>
    <string name="add_salary">Add salary</string>
    <string name="not_saved_please_try_again">NOT saved, please try again</string>
    <string name="invalid_type">Invalid type</string>
    <string name="type_added">Type added</string>
    <string name="already_exists">Already exists</string>
    <string name="TRUE">TRUE</string>
    <string name="FALSE">FALSE</string>
    <string name="set_your_personal_reminders_here">Set your personal reminders here! \n</string>
    <string name="reminders_text">The reminders will pop-up in your notification bar on the chosen day and hour every month.</string>
    <string name="time">Time:   </string>
    <string name="select_time">Select Time</string>
    <string name="Day">Day:  </string>
    <string name="message_is_required">Adding message is required.</string>
    <string name="loading">Loading...</string>
    <string name="date">Date:</string>
    <string name="remember">Remember</string>
    <string name="please_select">Please select</string>
    <string name="leva">lv</string>
    <string name="to">TO</string>
    <string name="from">FROM</string>
    <string name="you_have_no_activity_for_this_period">You have no activity for this period.</string>
    <string name="PERIOD">PERIOD</string>
    <string name="Alcohol">Alcohol</string>
    <string name="Bar">Bar</string>
    <string name="Balling">Balling</string>
    <string name="Bike">Bike</string>
    <string name="Books">Books</string>
    <string name="Boy">Boy</string>
    <string name="Burger">Burger</string>
    <string name="Business">Business</string>
    <string name="Car">Car</string>
    <string name="CarRepair">Car Repair</string>
    <string name="Cinema">Cinema</string>
    <string name="Clothes">Clothes</string>
    <string name="Coffee">Coffee</string>
    <string name="Concert">Concert</string>
    <string name="Couple">Couple</string>
    <string name="Bitcoin">Bitcoin</string>
    <string name="Dividends">Dividends</string>
    <string name="Codding">Codding</string>
    <string name="Electricity">Electricity</string>
    <string name="FirstAid">First Aid</string>
    <string name="Food">Food</string>
    <string name="Fuel">Fuel</string>
    <string name="Games">Games</string>
    <string name="Gift">Gift</string>
    <string name="Girl">Girl</string>
    <string name="HairStyle">Hair Style</string>
    <string name="Holiday">Holiday</string>
    <string name="Home">Home</string>
    <string name="Love">Love</string>
    <string name="Lunch">Lunch</string>
    <string name="Makeup">Makeup</string>
    <string name="Music">Music</string>
    <string name="Pet">Pet</string>
    <string name="Phone">Phone</string>
    <string name="PhoneApps">Phone apps</string>
    <string name="Race">Race</string>
    <string name="Repair">Repair</string>
    <string name="Services">Services</string>
    <string name="Sallary">Salary</string>
    <string name="Savings">Savings</string>
    <string name="Shoes">Shoes</string>
    <string name="Shopping">Shopping</string>
    <string name="Skiing">Skiing</string>
    <string name="Sport">Sport</string>
    <string name="Theatre">Theatre</string>
    <string name="Trip">Trip</string>
    <string name="Wedding">Wedding</string>
    <string name="TV">TV</string>
    <string name="Tabacco">Tabacco</string>
</resources>
