<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="io.money.moneyio.activities.RegisterMailActivity">

    <TextView
        android:text="@string/register"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="40sp"
        android:layout_marginBottom="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/registermail_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:maxLength="60"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/registermail_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/password"
        android:maxLines="1"
        android:maxLength="70"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/registermail_repeatpassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:maxLength="70"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <EditText
        android:id="@+id/registermail_firstname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/first_name"
        android:layout_marginTop="10dp"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:maxLength="30"
        android:gravity="center"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <EditText
        android:id="@+id/registermail_secondname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/second_name"
        android:gravity="center"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:maxLength="30"
        android:layout_marginTop="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/registermail_register_btn"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/register"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <View
        android:id="@+id/dummy_reg"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" >
        <requestFocus/>
    </View>

</LinearLayout>
