<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_profile"
    android:focusable="true"
    android:layout_margin="5dp"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Name: "
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_two_dots"
        android:textColor="#000000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/profile_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:hint="Amount"/>

        <EditText
            android:id="@+id/profile_choose_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false" />

        <ImageView
            android:id="@+id/profile_add_salary_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ok_button" />

        <ImageView
            android:id="@+id/profile_delete_salary_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/delete_button" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="14sp"
        android:text="*By adding your salary here, each month the added amount of money will be added to your account as Income."/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:text="@string/create_your_own_types_of_income_and_outcome_money"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/profile_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="3"
            android:maxLines="1"
            android:maxLength="10"
            android:hint="@string/your_type"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <RadioGroup
            android:id="@+id/profile_radiogr_kind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

                <RadioButton
                    android:id="@+id/profile_income_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/income"/>
                <RadioButton
                    android:id="@+id/profile_outcome_radio"
                    android:layout_weight="3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/expense"/>
        </RadioGroup>

        <ImageView
            android:id="@+id/profile_save_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ok_button" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_types"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000000"
        android:fontFamily="serif"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_no_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000"
        android:text="**No added types."/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>