<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_outcome"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <requestFocus/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/outcome_keyboard_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/insert_price"
            android:textColor="#000000"
            android:layout_marginTop="10dp"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/outcome_keyboard_1"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="1"/>

        <Button
            android:id="@+id/outcome_keyboard_2"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="2"/>

        <Button
            android:id="@+id/outcome_keyboard_3"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="3"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/outcome_keyboard_4"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="4" />

        <Button
            android:id="@+id/outcome_keyboard_5"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="5" />

        <Button
            android:id="@+id/outcome_keyboard_6"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/outcome_keyboard_7"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:background="@drawable/keyboard_button_design"
            android:text="7"/>

        <Button
            android:id="@+id/outcome_keyboard_8"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/keyboard_button_design"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:text="8"/>

        <Button
            android:id="@+id/outcome_keyboard_9"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/keyboard_button_design"
            android:textSize="18sp"
            android:layout_margin="2dp"
            android:text="9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/outcome_keyboard_dot"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/keyboard_button_design"
            android:textSize="18sp"
            android:text="@string/dot"/>

        <Button
            android:id="@+id/outcome_keyboard_0"
            android:layout_width="65dp"
            android:background="@drawable/keyboard_button_design"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="0"/>

        <Button
            android:id="@+id/outcome_keyboard_del"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:background="@drawable/keyboard_button_design"
            android:layout_margin="2dp"
            android:textSize="18sp"
            android:text="@string/del"/>

    </LinearLayout>

    <EditText
        android:id="@+id/outcome_comment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLines="1"
        android:maxLength="25"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="3dp"
        android:textColorHint="@color/appSilver"
        android:textCursorDrawable="@drawable/cursor_color_silver"
        android:hint="@string/insert_comment"
        android:gravity="center" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/outcome_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>